updated deps and deleted duplicate keys in project map